cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09368_259814229.yaml
Resources:
  queue276F7297:
    Type: AWS::SQS::Queue
    Properties:
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/queue/Resource
  deadLetterQueue3F848E28:
    Type: AWS::SQS::Queue
    Properties:
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/deadLetterQueue/Resource
  cluster611F8AFF:
    Type: AWS::ECS::Cluster
    Properties:
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Resource
  clusterVpc91107A71:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
        - Key: Name
          Value: FargateTaskRunnerDemoStack/cluster/Vpc
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/Resource
  clusterVpcPublicSubnet1Subnet3948EFCA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: clusterVpc91107A71
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
        - Key: Name
          Value: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet1
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet1/Subnet
  clusterVpcPublicSubnet1RouteTable85A91E8C:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: clusterVpc91107A71
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
        - Key: Name
          Value: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet1/RouteTable
  clusterVpcPublicSubnet1RouteTableAssociationABF3C3B6:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: clusterVpcPublicSubnet1RouteTable85A91E8C
      SubnetId:
        Ref: clusterVpcPublicSubnet1Subnet3948EFCA
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet1/RouteTableAssociation
  clusterVpcPublicSubnet1DefaultRouteF41D2737:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: clusterVpcPublicSubnet1RouteTable85A91E8C
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: clusterVpcIGW64BABB17
    DependsOn:
      - clusterVpcVPCGW9E9B1FA8
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet1/DefaultRoute
  clusterVpcPublicSubnet1EIP0E24289A:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
        - Key: Name
          Value: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet1/EIP
  clusterVpcPublicSubnet1NATGateway278CA43C:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - clusterVpcPublicSubnet1EIP0E24289A
          - AllocationId
      SubnetId:
        Ref: clusterVpcPublicSubnet1Subnet3948EFCA
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
        - Key: Name
          Value: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet1/NATGateway
  clusterVpcPublicSubnet2SubnetEFB8E71C:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: clusterVpc91107A71
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
        - Key: Name
          Value: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet2
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet2/Subnet
  clusterVpcPublicSubnet2RouteTable21948248:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: clusterVpc91107A71
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
        - Key: Name
          Value: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet2/RouteTable
  clusterVpcPublicSubnet2RouteTableAssociation21B4DF05:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: clusterVpcPublicSubnet2RouteTable21948248
      SubnetId:
        Ref: clusterVpcPublicSubnet2SubnetEFB8E71C
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet2/RouteTableAssociation
  clusterVpcPublicSubnet2DefaultRouteC71B8373:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: clusterVpcPublicSubnet2RouteTable21948248
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: clusterVpcIGW64BABB17
    DependsOn:
      - clusterVpcVPCGW9E9B1FA8
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet2/DefaultRoute
  clusterVpcPublicSubnet2EIP6FF291E5:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
        - Key: Name
          Value: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet2/EIP
  clusterVpcPublicSubnet2NATGatewayD971ED50:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - clusterVpcPublicSubnet2EIP6FF291E5
          - AllocationId
      SubnetId:
        Ref: clusterVpcPublicSubnet2SubnetEFB8E71C
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
        - Key: Name
          Value: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PublicSubnet2/NATGateway
  clusterVpcPrivateSubnet1Subnet4D445D11:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: clusterVpc91107A71
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
        - Key: Name
          Value: FargateTaskRunnerDemoStack/cluster/Vpc/PrivateSubnet1
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PrivateSubnet1/Subnet
  clusterVpcPrivateSubnet1RouteTable6B7B6A77:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: clusterVpc91107A71
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
        - Key: Name
          Value: FargateTaskRunnerDemoStack/cluster/Vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PrivateSubnet1/RouteTable
  clusterVpcPrivateSubnet1RouteTableAssociationDE66313E:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: clusterVpcPrivateSubnet1RouteTable6B7B6A77
      SubnetId:
        Ref: clusterVpcPrivateSubnet1Subnet4D445D11
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PrivateSubnet1/RouteTableAssociation
  clusterVpcPrivateSubnet1DefaultRoute6A776454:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: clusterVpcPrivateSubnet1RouteTable6B7B6A77
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: clusterVpcPublicSubnet1NATGateway278CA43C
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PrivateSubnet1/DefaultRoute
  clusterVpcPrivateSubnet2Subnet6DFF6572:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: clusterVpc91107A71
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
        - Key: Name
          Value: FargateTaskRunnerDemoStack/cluster/Vpc/PrivateSubnet2
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PrivateSubnet2/Subnet
  clusterVpcPrivateSubnet2RouteTable0D967850:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: clusterVpc91107A71
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
        - Key: Name
          Value: FargateTaskRunnerDemoStack/cluster/Vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PrivateSubnet2/RouteTable
  clusterVpcPrivateSubnet2RouteTableAssociation0E224256:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: clusterVpcPrivateSubnet2RouteTable0D967850
      SubnetId:
        Ref: clusterVpcPrivateSubnet2Subnet6DFF6572
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PrivateSubnet2/RouteTableAssociation
  clusterVpcPrivateSubnet2DefaultRouteF3B52CD2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: clusterVpcPrivateSubnet2RouteTable0D967850
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: clusterVpcPublicSubnet2NATGatewayD971ED50
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/PrivateSubnet2/DefaultRoute
  clusterVpcIGW64BABB17:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
        - Key: Name
          Value: FargateTaskRunnerDemoStack/cluster/Vpc
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/IGW
  clusterVpcVPCGW9E9B1FA8:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: clusterVpc91107A71
      InternetGatewayId:
        Ref: clusterVpcIGW64BABB17
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/cluster/Vpc/VPCGW
  taskdefinitionTaskRole4A3C6E80:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/taskdefinition/TaskRole/Resource
  taskdefinitionTaskRoleDefaultPolicyBEFF0310:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - logs:CreateLogGroup
              - logs:CreateLogStream
              - logs:DescribeLogStreams
              - logs:PutLogEvents
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: taskdefinitionTaskRoleDefaultPolicyBEFF0310
      Roles:
        - Ref: taskdefinitionTaskRole4A3C6E80
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/taskdefinition/TaskRole/DefaultPolicy/Resource
  taskdefinition6097074E:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image:
            Fn::Join:
              - ""
              - - Ref: AWS::AccountId
                - .dkr.ecr.
                - Ref: AWS::Region
                - "."
                - Ref: AWS::URLSuffix
                - /aws-cdk/assets:b2fee11fde706718659a3cf72d3ad44654f9151d3b6dbe56934a5db017d5b5b5
          LogConfiguration:
            LogDriver: awsfirelens
            Options:
              Name: cloudwatch
              auto_create_group: "true"
              log_group_name: FargateSQSConsumerDemo
              log_stream_prefix: Consumer
              region:
                Ref: AWS::Region
          Name: main
        - Essential: true
          FirelensConfiguration:
            Type: fluentbit
          Image:
            Ref: SsmParameterValueawsserviceawsforfluentbitlatestC96584B6F00A464EAD1953AFF4B05118Parameter
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: taskdefinitionlogrouterLogGroup4D922397
              awslogs-stream-prefix: firelens
              awslogs-region:
                Ref: AWS::Region
          MemoryReservation: 50
          Name: log-router
      Cpu: "1024"
      ExecutionRoleArn:
        Fn::GetAtt:
          - taskdefinitionExecutionRole379EC9AC
          - Arn
      Family: FargateTaskRunnerDemoStacktaskdefinition3B2674BD
      Memory: "2048"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
      TaskRoleArn:
        Fn::GetAtt:
          - taskdefinitionTaskRole4A3C6E80
          - Arn
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/taskdefinition/Resource
  taskdefinitionExecutionRole379EC9AC:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/taskdefinition/ExecutionRole/Resource
  taskdefinitionExecutionRoleDefaultPolicy331BF1CA:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":ecr:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :repository/aws-cdk/assets
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - ecr:GetAuthorizationToken
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - taskdefinitionlogrouterLogGroup4D922397
                - Arn
        Version: "2012-10-17"
      PolicyName: taskdefinitionExecutionRoleDefaultPolicy331BF1CA
      Roles:
        - Ref: taskdefinitionExecutionRole379EC9AC
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/taskdefinition/ExecutionRole/DefaultPolicy/Resource
  taskdefinitionlogrouterLogGroup4D922397:
    Type: AWS::Logs::LogGroup
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/taskdefinition/log-router/LogGroup/Resource
  runTaskSecurityGroup3D1EEA60:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: FargateTaskRunnerDemoStack/runTask/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
      VpcId:
        Ref: clusterVpc91107A71
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/runTask/SecurityGroup/Resource
  stateMachineRole64DF9B42:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                Fn::Join:
                  - ""
                  - - states.
                    - Ref: AWS::Region
                    - .amazonaws.com
        Version: "2012-10-17"
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/stateMachine/Role/Resource
  stateMachineRoleDefaultPolicy9579E9AD:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: ecs:RunTask
            Effect: Allow
            Resource:
              Ref: taskdefinition6097074E
          - Action:
              - ecs:StopTask
              - ecs:DescribeTasks
            Effect: Allow
            Resource: "*"
          - Action: iam:PassRole
            Effect: Allow
            Resource:
              - Fn::GetAtt:
                  - taskdefinitionTaskRole4A3C6E80
                  - Arn
              - Fn::GetAtt:
                  - taskdefinitionExecutionRole379EC9AC
                  - Arn
          - Action:
              - events:PutTargets
              - events:PutRule
              - events:DescribeRule
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":events:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - :rule/StepFunctionsGetEventsForECSTaskRule
          - Action: sqs:SendMessage
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - deadLetterQueue3F848E28
                - Arn
        Version: "2012-10-17"
      PolicyName: stateMachineRoleDefaultPolicy9579E9AD
      Roles:
        - Ref: stateMachineRole64DF9B42
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/stateMachine/Role/DefaultPolicy/Resource
  stateMachineE926C166:
    Type: AWS::StepFunctions::StateMachine
    Properties:
      DefinitionString:
        Fn::Join:
          - ""
          - - '{"StartAt":"runTask","States":{"runTask":{"End":true,"Catch":[{"ErrorEquals":["States.ALL"],"ResultPath":"$.ErrorInfo","Next":"redrive"}],"Parameters":{"Cluster":"'
            - Fn::GetAtt:
                - cluster611F8AFF
                - Arn
            - '","TaskDefinition":"'
            - Ref: taskdefinition6097074E
            - '","NetworkConfiguration":{"AwsvpcConfiguration":{"Subnets":["'
            - Ref: clusterVpcPrivateSubnet1Subnet4D445D11
            - '","'
            - Ref: clusterVpcPrivateSubnet2Subnet6DFF6572
            - '"],"SecurityGroups":["'
            - Fn::GetAtt:
                - runTaskSecurityGroup3D1EEA60
                - GroupId
            - '"]}},"Overrides":{"ContainerOverrides":[{"Name":"main","Environment":[{"Name":"BODY","Value.$":"$.Record.body"},{"Name":"EXECUTION_ID","Value.$":"$$.Execution.Id"}]}]},"LaunchType":"FARGATE"},"Type":"Task","Resource":"arn:'
            - Ref: AWS::Partition
            - :states:::ecs:runTask.sync"},"redrive":{"End":true,"Parameters":{"QueueUrl":"
            - Ref: deadLetterQueue3F848E28
            - '","MessageBody.$":"$.Record.body"},"Type":"Task","Resource":"arn:'
            - Ref: AWS::Partition
            - :states:::sqs:sendMessage"}}}
      RoleArn:
        Fn::GetAtt:
          - stateMachineRole64DF9B42
          - Arn
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
    DependsOn:
      - stateMachineRoleDefaultPolicy9579E9AD
      - stateMachineRole64DF9B42
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/stateMachine/Resource
  startMachineServiceRole929531EB:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/startMachine/ServiceRole/Resource
  startMachineServiceRoleDefaultPolicy9EDE778D:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - sqs:ReceiveMessage
              - sqs:ChangeMessageVisibility
              - sqs:GetQueueUrl
              - sqs:DeleteMessage
              - sqs:GetQueueAttributes
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - queue276F7297
                - Arn
          - Action: states:StartExecution
            Effect: Allow
            Resource:
              Ref: stateMachineE926C166
        Version: "2012-10-17"
      PolicyName: startMachineServiceRoleDefaultPolicy9EDE778D
      Roles:
        - Ref: startMachineServiceRole929531EB
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/startMachine/ServiceRole/DefaultPolicy/Resource
  startMachineEE0FD05E:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket:
          Ref: AssetParameters0292d7d7c3f136659900411d2bec852eaf37d05f9e4b76cf33eb64270417463aS3Bucket59BAF987
        S3Key:
          Fn::Join:
            - ""
            - - Fn::Select:
                  - 0
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters0292d7d7c3f136659900411d2bec852eaf37d05f9e4b76cf33eb64270417463aS3VersionKey2C760C40
              - Fn::Select:
                  - 1
                  - Fn::Split:
                      - "||"
                      - Ref: AssetParameters0292d7d7c3f136659900411d2bec852eaf37d05f9e4b76cf33eb64270417463aS3VersionKey2C760C40
      Handler: index.startMachine
      Role:
        Fn::GetAtt:
          - startMachineServiceRole929531EB
          - Arn
      Runtime: nodejs12.x
      Environment:
        Variables:
          STATE_MACHINE_ARN:
            Ref: stateMachineE926C166
      Tags:
        - Key: Application
          Value: FargateSQSConsumerDemo
    DependsOn:
      - startMachineServiceRoleDefaultPolicy9EDE778D
      - startMachineServiceRole929531EB
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/startMachine/Resource
      aws:asset:path: asset.0292d7d7c3f136659900411d2bec852eaf37d05f9e4b76cf33eb64270417463a
      aws:asset:property: Code
  startMachineSqsEventSourceFargateTaskRunnerDemoStackqueue90F5812F7DFEDAEE:
    Type: AWS::Lambda::EventSourceMapping
    Properties:
      EventSourceArn:
        Fn::GetAtt:
          - queue276F7297
          - Arn
      FunctionName:
        Ref: startMachineEE0FD05E
      BatchSize: 10
    Metadata:
      aws:cdk:path: FargateTaskRunnerDemoStack/startMachine/SqsEventSource:FargateTaskRunnerDemoStackqueue90F5812F/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.36.0,@aws-cdk/aws-apigateway=1.36.0,@aws-cdk/aws-applicationautoscaling=1.36.0,@aws-cdk/aws-autoscaling=1.36.0,@aws-cdk/aws-autoscaling-common=1.36.0,@aws-cdk/aws-autoscaling-hooktargets=1.36.0,@aws-cdk/aws-cloudwatch=1.36.0,@aws-cdk/aws-ec2=1.36.0,@aws-cdk/aws-ecr=1.36.0,@aws-cdk/aws-ecr-assets=1.36.0,@aws-cdk/aws-ecs=1.36.0,@aws-cdk/aws-elasticloadbalancingv2=1.36.0,@aws-cdk/aws-events=1.36.0,@aws-cdk/aws-iam=1.36.0,@aws-cdk/aws-kms=1.36.0,@aws- [...]
    Condition: CDKMetadataAvailable
Parameters:
  AssetParameters0292d7d7c3f136659900411d2bec852eaf37d05f9e4b76cf33eb64270417463aS3Bucket59BAF987:
    Type: String
    Description: S3 bucket for asset "0292d7d7c3f136659900411d2bec852eaf37d05f9e4b76cf33eb64270417463a"
  AssetParameters0292d7d7c3f136659900411d2bec852eaf37d05f9e4b76cf33eb64270417463aS3VersionKey2C760C40:
    Type: String
    Description: S3 key for asset version "0292d7d7c3f136659900411d2bec852eaf37d05f9e4b76cf33eb64270417463a"
  AssetParameters0292d7d7c3f136659900411d2bec852eaf37d05f9e4b76cf33eb64270417463aArtifactHash3E9D86A8:
    Type: String
    Description: Artifact hash for asset "0292d7d7c3f136659900411d2bec852eaf37d05f9e4b76cf33eb64270417463a"
  SsmParameterValueawsserviceawsforfluentbitlatestC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /aws/service/aws-for-fluent-bit/latest
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
